Menu de usuario

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,3 +6,30 @@ body
 	margin: 0 auto; 
 	max-width: 1024px; /*ancho maximo*/ 
 }
+header
+{
+	background:yellowgreen;
+	border: 1px solid black; /*alrededor*/
+	border-radius: 5px; /*esquinas */
+	color: white; /*letra*/
+}
+header h1
+{
+	text-align: center;
+}
+
+header nav ul li
+{
+	/*border: 1px solid black;*/
+	background: black;
+	border-radius: 5px;
+	color:white;
+	display: inline-block; /*rompe caja*/
+	margin: 0px 50px;
+	padding: 10px ;
+}
+header nav ul li:hover
+{
+	background:white;
+	color: black;
+}
