--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -6,6 +6,25 @@ body
 	margin:0 auto;
 	max-width: 1024px;
 }
+
+form 
+{
+	float:right;
+	margin-top: -36px;
+	margin-right: 10px;
+}
+
+form input
+{
+	border-radius: 5px;
+}
+
+form input[type="button"]
+{
+	background: yellowgreen;
+	color:white;
+}
+
 header
 {
 	background: #B3D8EB;
@@ -14,7 +33,9 @@ header nav
 {
 	background: #0E6CB0;
 	border-radius: 5px;
+	margin: 0 auto;
 	padding:1px 0px 1px 0px;
+	width:99%;
 }
 header nav ul li
 {
@@ -26,4 +47,14 @@ header nav ul li
 #logo
 {
 	margin-top: -150px
+}
+#Seccion01 article
+{
+	text-align: center;	
+}
+#Seccion01 article img
+{
+	border:5px solid rgba(150,150,150,0.2);
+	margin-top: 15px;
+	width:98%;
 }
