--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -58,3 +58,34 @@ header nav ul li
 	margin-top: 15px;
 	width:98%;
 }
+#Seccion01
+{
+	margin:0 auto;
+}
+#Seccion02 article
+{
+	display:inline-block;
+	vertical-align: top;
+	width:32.8%;
+}
+#Seccion02 article input[type="submit"]
+{
+	background: white;
+	border-radius: 4px;
+	color:blue;
+	margin-left: 35%;
+
+}
+.unaSeccion,.otraSeccion
+{
+	font-weight: bold; /*negritas*/
+}
+.unaSeccion
+{
+	font-size: 4.5em;
+}
+
+.otraSeccion
+{
+	font-size: 2em;
+}
