--- a/practicapwCss/css/estilos.css
+++ b/practicapwCss/css/estilos.css
@@ -57,13 +57,31 @@ h1
 {
 	border: 1 px black;
 }
+#article0101
+{
+
+	margin-left: 25px;
+	margin-top: 20px;
+}
+#article0201
+{
+	margin-left: 25px;
+	margin-top: 20px;
+	width: 20px;
+}
 
 #article0202
 {
-	width: 45%
+	margin-left: 155px;
+	margin-top: 26px;
+	width: 42%
 }
-
-
+#article0203
+{
+	margin-left: 35px;
+	margin-top: 15px;
+	width: 32%
+}
 
 #primerSeccion article
 {
@@ -95,23 +113,76 @@ h1
 	display: inline-block;
 	vertical-align: top;
 }
-
-
-
+#imgdiv1
+{
+	margin-top: 25px;
+}
+#texto
+{
+	font-family: 'Roboto', sans-serif;
+	font-size: 0.8em;
+}
+#botonLeerMas
+{
+	border-radius: 3px 3px;
+	color:white;
+	padding: 5px;
+}
+.input1
+{
+	border-radius: 4px;
+	margin-bottom: 10px;
+	margin-left: 35px;
+	margin-top: 20px;
+	margin-right: 10px;
+}
+.div
+{
+	border: 1px solid gray;
+	border-radius: 5px;
+	margin-top: -4px;
+	padding: 2px;
+	padding-right: -22px;
+	margin-right: 10px;
+}
+.div2
+{
+	border: 1px solid gray;
+	border-radius: 5px;
+	margin-top: -4px;
+	padding: 2px;
+	margin-right: 10px;
+}
+.div3
+{
+	border: 1px solid gray;
+	border-radius: 5px;
+	margin-top: -4px;
+	padding: 2px;
+	margin-right: 10px;
+}
 .naranja
 {
 	position: relative;
 	background-color: #FF4000;
 	border-radius: 20px;
 	color:white;
-	margin-left: 4px;
-	padding-left: 110px;
-	padding-right: 110px;
+	padding-left: 120px;
+	padding-right: 120px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	font-family: 'Roboto', sans-serif;
 	font-size: 1em;
 	font-weight: bold;
 }
+
+.tituloDelPost
+{
+	color:gray;
+	font-family: 'Roboto', sans-serif;
+	font-size: 1.8em;
+	font-weight: bold;
+}
+
 
 
