--- a/Gato/css/estilos.css
+++ b/Gato/css/estilos.css
@@ -13,13 +13,15 @@ h1
 form input
 {
 	border:none;
-	padding: 50px;
+	border-collapse: collapse;
+	background: white;
+	padding: 80px;
 }
 form table
 {
 	border-collapse: collapse;
-	margin-left: 170px;
-	margin-top: 120px;
+	margin-left: 270px;
+	margin-top: 100px;
 }
 
 .borde1
