Gato Ejemplo de profe

--- a/GatoEjemplo/css/estilosGato.css
+++ b/GatoEjemplo/css/estilosGato.css
@@ -21,6 +21,11 @@ section article table td
 	width: 100px;
 }
 
+#boton
+{
+	margin-left: 490px;
+}
+
 #unouno, #unodos, #dosuno, #dosdos
 {
 	border-bottom: 8px solid red;
