Continuacion de Jquery2

--- a/jquery2/css/estilos.css
+++ b/jquery2/css/estilos.css
@@ -14,8 +14,12 @@ header nav ul li
 {
 	display: inline-block;
 }
+header nav ul li button
+{
+	width:89px;
+}
 #datosUsuario
 {
 	margin:9 auto;
-	width:320px;
+	width:320px; 
 }
